--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hey-ui",
+  "name": "@mittnavnermike/hey-ui",
   "version": "1.0.0",
   "description": "Heydays component library",
   "author": "mittnavnermike",
