--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,9 @@
     "start": "craco start",
     "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
     "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
+    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "@testing-library/jest-dom": "link:../node_modules/@testing-library/jest-dom",
@@ -20,6 +22,7 @@
     "@types/styled-components": "^5.1.7",
     "color": "^3.1.3",
     "craco": "^0.0.3",
+    "framer-motion": "^3.2.2-rc.1",
     "hey-ui": "link:..",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
@@ -28,7 +31,17 @@
     "typescript": "link:../node_modules/typescript"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-object-rest-spread": "^7.8.3"
+    "@babel/plugin-syntax-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@storybook-addons/react-docgen-typescript-loader": "^3.8.0",
+    "@storybook/addon-a11y": "^6.1.15",
+    "@storybook/addon-backgrounds": "^6.1.15",
+    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/addon-storysource": "^6.1.15",
+    "@storybook/node-logger": "^6.1.15",
+    "@storybook/react": "^6.1.15",
+    "storybook-addon-theme-playground": "^2.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
